--- a/app/assets/stylesheets/days.scss
+++ b/app/assets/stylesheets/days.scss
@@ -6,7 +6,6 @@
 table#attendance_day {
     border-style: solid;
     border-color: grey;
-    max-width: 0;
 }
 
 th {
