--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -2,18 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-table, th, td {
-    padding: 10px;
-    /*border: 1px solid black;*/
-    text-align: center;
-}
-
-table {
-    width: 90%;
-    border-spacing: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 table#pres_abs {
     text-align: center;
